2011-03-27  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Fix offset passing.

	* include/network/HandlerThread.h: Add debugging information for
	HandlerThread's destructor.

	* include/dmcs/AskNextNotification.h: Simplify path to
	std::size_t.
	* include/network/NeighborOut.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/dmcs/StreamingDMCSNotification.h: Likewise.
	* include/dmcs/OutputNotification.h: Likewise.
	* include/dmcs/ConflictNotification.h: Likewise.
	* include/dmcs/BaseTypes.h: Likewise.
	* include/dmcs/BaseNotification.h: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

2011-03-26  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Initialize pack_size.

	* include/network/Handler.h: Handler notifies SAT to start in case
	of leaf nodes.
	* include/network/Handler.tcc: Likewise.
	* include/network/HandlerThread.h: Likewise.

	* include/network/Server.h: Fix a segfault.
	* src/network/Server.cpp: Likewise.

2011-03-25  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/Makefile.am: Add HandlerThread.h
	* include/network/HandlerThread.h: New file. (Interesting
	technique: forward declaration of templates)

	* include/network/Handler.h: Let the thread starts at
	HandlerThread.
	* include/network/Handler.tcc: Likewise.
	* include/network/Server.h: Likewise.
	* src/network/Server.cpp: Likewise.

	* src/network/OutputThread.cpp: Read and ignore the first k1
	models, and then read and store the next until k2.

	* include/dmcs/OutputNotification.h: Replace pack_size by k1, k2.
	* include/network/Handler.h: Likewise.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/ModelSessionId.h: Add path.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.